Lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> block
Rule 7     instruction -> if
Rule 8     instruction -> print
Rule 9     instruction -> while
Rule 10    instruction -> for
Rule 11    instruction -> break
Rule 12    instruction -> continue
Rule 13    instruction -> return
Rule 14    instruction -> assign
Rule 15    instruction -> assign_in_array
Rule 16    block -> { instructions }
Rule 17    if -> IF ( assignment ) instruction
Rule 18    if -> IF ( assignment ) instruction ELSE instruction
Rule 19    print -> PRINT arguments ;
Rule 20    arguments -> assignment
Rule 21    arguments -> assignment , arguments
Rule 22    while -> WHILE ( assignment ) instruction
Rule 23    for -> FOR ID = range instruction
Rule 24    range -> expression : expression
Rule 25    break -> BREAK ;
Rule 26    continue -> CONTINUE ;
Rule 27    return -> RETURN ;
Rule 28    return -> RETURN assignment ;
Rule 29    assign -> ID = assign
Rule 30    assign -> ID = assignment ;
Rule 31    assign -> ID ADDASSIGN assignment ;
Rule 32    assign -> ID SUBASSIGN assignment ;
Rule 33    assign -> ID MULASSIGN assignment ;
Rule 34    assign -> ID DIVASSIGN assignment ;
Rule 35    assign_in_array -> ID array_range = assign
Rule 36    assign_in_array -> ID array_range = assignment ;
Rule 37    assign_in_array -> ID array_range ADDASSIGN assignment ;
Rule 38    assign_in_array -> ID array_range SUBASSIGN assignment ;
Rule 39    assign_in_array -> ID array_range MULASSIGN assignment ;
Rule 40    assign_in_array -> ID array_range DIVASSIGN assignment ;
Rule 41    array_range -> [ INTNUM , INTNUM ]
Rule 42    array_range -> [ INTNUM ]
Rule 43    assignment -> STRING
Rule 44    assignment -> matrix_initialization
Rule 45    assignment -> relational_expression
Rule 46    assignment -> expression
Rule 47    assignment -> array
Rule 48    array -> [ ]
Rule 49    array -> [ dimensions ]
Rule 50    dimensions -> values
Rule 51    values -> value
Rule 52    values -> value , values
Rule 53    value -> STRING
Rule 54    value -> number
Rule 55    relational_expression -> expression < expression
Rule 56    relational_expression -> expression > expression
Rule 57    relational_expression -> expression LESSEQUAL expression
Rule 58    relational_expression -> expression MOREEQUAL expression
Rule 59    relational_expression -> expression EQUAL expression
Rule 60    relational_expression -> expression NOTEQUAL expression
Rule 61    expression -> expression + expression
Rule 62    expression -> expression - expression
Rule 63    expression -> expression * expression
Rule 64    expression -> expression / expression
Rule 65    expression -> expression DOTADD expression
Rule 66    expression -> expression DOTSUB expression
Rule 67    expression -> expression DOTMUL expression
Rule 68    expression -> expression DOTDIV expression
Rule 69    expression -> number
Rule 70    expression -> ID
Rule 71    expression -> ID TRANSPOSE
Rule 72    expression -> - expression
Rule 73    matrix_initialization -> EYE ( INTNUM )
Rule 74    matrix_initialization -> ZEROS ( INTNUM )
Rule 75    matrix_initialization -> ONES ( INTNUM )
Rule 76    number -> INTNUM
Rule 77    number -> FLOAT

Terminals, with rules where they appear

(                    : 17 18 22 73 74 75
)                    : 17 18 22 73 74 75
*                    : 63
+                    : 61
,                    : 21 41 52
-                    : 62 72
/                    : 64
:                    : 24
;                    : 19 25 26 27 28 30 31 32 33 34 36 37 38 39 40
<                    : 55
=                    : 23 29 30 35 36
>                    : 56
ADDASSIGN            : 31 37
BREAK                : 25
CONTINUE             : 26
DIVASSIGN            : 34 40
DOTADD               : 65
DOTDIV               : 68
DOTMUL               : 67
DOTSUB               : 66
ELSE                 : 18
EQUAL                : 59
EYE                  : 73
FLOAT                : 77
FOR                  : 23
ID                   : 23 29 30 31 32 33 34 35 36 37 38 39 40 70 71
IF                   : 17 18
INTNUM               : 41 41 42 73 74 75 76
LESSEQUAL            : 57
MOREEQUAL            : 58
MULASSIGN            : 33 39
NOTEQUAL             : 60
ONES                 : 75
PRINT                : 19
RETURN               : 27 28
STRING               : 43 53
SUBASSIGN            : 32 38
TRANSPOSE            : 71
WHILE                : 22
ZEROS                : 74
[                    : 41 42 48 49
]                    : 41 42 48 49
error                : 
{                    : 16
}                    : 16

Nonterminals, with rules where they appear

arguments            : 19 21
array                : 47
array_range          : 35 36 37 38 39 40
assign               : 14 29 35
assign_in_array      : 15
assignment           : 17 18 20 21 22 28 30 31 32 33 34 36 37 38 39 40
block                : 6
break                : 11
continue             : 12
dimensions           : 49
expression           : 24 24 46 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 72
for                  : 10
if                   : 7
instruction          : 4 5 17 18 18 22 23
instructions         : 2 4 16
instructions_opt     : 1
matrix_initialization : 44
number               : 54 69
print                : 8
program              : 0
range                : 23
relational_expression : 45
return               : 13
value                : 51 52
values               : 50 52
while                : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . block
    (7) instruction -> . if
    (8) instruction -> . print
    (9) instruction -> . while
    (10) instruction -> . for
    (11) instruction -> . break
    (12) instruction -> . continue
    (13) instruction -> . return
    (14) instruction -> . assign
    (15) instruction -> . assign_in_array
    (16) block -> . { instructions }
    (17) if -> . IF ( assignment ) instruction
    (18) if -> . IF ( assignment ) instruction ELSE instruction
    (19) print -> . PRINT arguments ;
    (22) while -> . WHILE ( assignment ) instruction
    (23) for -> . FOR ID = range instruction
    (25) break -> . BREAK ;
    (26) continue -> . CONTINUE ;
    (27) return -> . RETURN ;
    (28) return -> . RETURN assignment ;
    (29) assign -> . ID = assign
    (30) assign -> . ID = assignment ;
    (31) assign -> . ID ADDASSIGN assignment ;
    (32) assign -> . ID SUBASSIGN assignment ;
    (33) assign -> . ID MULASSIGN assignment ;
    (34) assign -> . ID DIVASSIGN assignment ;
    (35) assign_in_array -> . ID array_range = assign
    (36) assign_in_array -> . ID array_range = assignment ;
    (37) assign_in_array -> . ID array_range ADDASSIGN assignment ;
    (38) assign_in_array -> . ID array_range SUBASSIGN assignment ;
    (39) assign_in_array -> . ID array_range MULASSIGN assignment ;
    (40) assign_in_array -> . ID array_range DIVASSIGN assignment ;

    $end            reduce using rule 3 (instructions_opt -> .)
    {               shift and go to state 21
    IF              shift and go to state 16
    PRINT           shift and go to state 5
    WHILE           shift and go to state 3
    FOR             shift and go to state 12
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 4
    RETURN          shift and go to state 2
    ID              shift and go to state 15

    assign_in_array                shift and go to state 1
    return                         shift and go to state 11
    continue                       shift and go to state 20
    for                            shift and go to state 7
    instruction                    shift and go to state 17
    break                          shift and go to state 13
    instructions_opt               shift and go to state 14
    while                          shift and go to state 19
    program                        shift and go to state 8
    print                          shift and go to state 9
    instructions                   shift and go to state 10
    assign                         shift and go to state 22
    block                          shift and go to state 23
    if                             shift and go to state 6

state 1

    (15) instruction -> assign_in_array .

    }               reduce using rule 15 (instruction -> assign_in_array .)
    {               reduce using rule 15 (instruction -> assign_in_array .)
    IF              reduce using rule 15 (instruction -> assign_in_array .)
    PRINT           reduce using rule 15 (instruction -> assign_in_array .)
    WHILE           reduce using rule 15 (instruction -> assign_in_array .)
    FOR             reduce using rule 15 (instruction -> assign_in_array .)
    BREAK           reduce using rule 15 (instruction -> assign_in_array .)
    CONTINUE        reduce using rule 15 (instruction -> assign_in_array .)
    RETURN          reduce using rule 15 (instruction -> assign_in_array .)
    ID              reduce using rule 15 (instruction -> assign_in_array .)
    $end            reduce using rule 15 (instruction -> assign_in_array .)
    ELSE            reduce using rule 15 (instruction -> assign_in_array .)


state 2

    (27) return -> RETURN . ;
    (28) return -> RETURN . assignment ;
    (43) assignment -> . STRING
    (44) assignment -> . matrix_initialization
    (45) assignment -> . relational_expression
    (46) assignment -> . expression
    (47) assignment -> . array
    (73) matrix_initialization -> . EYE ( INTNUM )
    (74) matrix_initialization -> . ZEROS ( INTNUM )
    (75) matrix_initialization -> . ONES ( INTNUM )
    (55) relational_expression -> . expression < expression
    (56) relational_expression -> . expression > expression
    (57) relational_expression -> . expression LESSEQUAL expression
    (58) relational_expression -> . expression MOREEQUAL expression
    (59) relational_expression -> . expression EQUAL expression
    (60) relational_expression -> . expression NOTEQUAL expression
    (61) expression -> . expression + expression
    (62) expression -> . expression - expression
    (63) expression -> . expression * expression
    (64) expression -> . expression / expression
    (65) expression -> . expression DOTADD expression
    (66) expression -> . expression DOTSUB expression
    (67) expression -> . expression DOTMUL expression
    (68) expression -> . expression DOTDIV expression
    (69) expression -> . number
    (70) expression -> . ID
    (71) expression -> . ID TRANSPOSE
    (72) expression -> . - expression
    (48) array -> . [ ]
    (49) array -> . [ dimensions ]
    (76) number -> . INTNUM
    (77) number -> . FLOAT

    ;               shift and go to state 30
    STRING          shift and go to state 32
    EYE             shift and go to state 31
    ZEROS           shift and go to state 35
    ONES            shift and go to state 34
    ID              shift and go to state 37
    -               shift and go to state 28
    [               shift and go to state 36
    INTNUM          shift and go to state 26
    FLOAT           shift and go to state 38

    matrix_initialization          shift and go to state 24
    assignment                     shift and go to state 33
    number                         shift and go to state 27
    relational_expression          shift and go to state 29
    array                          shift and go to state 25
    expression                     shift and go to state 39

state 3

    (22) while -> WHILE . ( assignment ) instruction

    (               shift and go to state 40


state 4

    (26) continue -> CONTINUE . ;

    ;               shift and go to state 41


state 5

    (19) print -> PRINT . arguments ;
    (20) arguments -> . assignment
    (21) arguments -> . assignment , arguments
    (43) assignment -> . STRING
    (44) assignment -> . matrix_initialization
    (45) assignment -> . relational_expression
    (46) assignment -> . expression
    (47) assignment -> . array
    (73) matrix_initialization -> . EYE ( INTNUM )
    (74) matrix_initialization -> . ZEROS ( INTNUM )
    (75) matrix_initialization -> . ONES ( INTNUM )
    (55) relational_expression -> . expression < expression
    (56) relational_expression -> . expression > expression
    (57) relational_expression -> . expression LESSEQUAL expression
    (58) relational_expression -> . expression MOREEQUAL expression
    (59) relational_expression -> . expression EQUAL expression
    (60) relational_expression -> . expression NOTEQUAL expression
    (61) expression -> . expression + expression
    (62) expression -> . expression - expression
    (63) expression -> . expression * expression
    (64) expression -> . expression / expression
    (65) expression -> . expression DOTADD expression
    (66) expression -> . expression DOTSUB expression
    (67) expression -> . expression DOTMUL expression
    (68) expression -> . expression DOTDIV expression
    (69) expression -> . number
    (70) expression -> . ID
    (71) expression -> . ID TRANSPOSE
    (72) expression -> . - expression
    (48) array -> . [ ]
    (49) array -> . [ dimensions ]
    (76) number -> . INTNUM
    (77) number -> . FLOAT

    STRING          shift and go to state 32
    EYE             shift and go to state 31
    ZEROS           shift and go to state 35
    ONES            shift and go to state 34
    ID              shift and go to state 37
    -               shift and go to state 28
    [               shift and go to state 36
    INTNUM          shift and go to state 26
    FLOAT           shift and go to state 38

    matrix_initialization          shift and go to state 24
    assignment                     shift and go to state 43
    number                         shift and go to state 27
    relational_expression          shift and go to state 29
    array                          shift and go to state 25
    expression                     shift and go to state 39
    arguments                      shift and go to state 42

state 6

    (7) instruction -> if .

    }               reduce using rule 7 (instruction -> if .)
    {               reduce using rule 7 (instruction -> if .)
    IF              reduce using rule 7 (instruction -> if .)
    PRINT           reduce using rule 7 (instruction -> if .)
    WHILE           reduce using rule 7 (instruction -> if .)
    FOR             reduce using rule 7 (instruction -> if .)
    BREAK           reduce using rule 7 (instruction -> if .)
    CONTINUE        reduce using rule 7 (instruction -> if .)
    RETURN          reduce using rule 7 (instruction -> if .)
    ID              reduce using rule 7 (instruction -> if .)
    $end            reduce using rule 7 (instruction -> if .)
    ELSE            reduce using rule 7 (instruction -> if .)


state 7

    (10) instruction -> for .

    }               reduce using rule 10 (instruction -> for .)
    {               reduce using rule 10 (instruction -> for .)
    IF              reduce using rule 10 (instruction -> for .)
    PRINT           reduce using rule 10 (instruction -> for .)
    WHILE           reduce using rule 10 (instruction -> for .)
    FOR             reduce using rule 10 (instruction -> for .)
    BREAK           reduce using rule 10 (instruction -> for .)
    CONTINUE        reduce using rule 10 (instruction -> for .)
    RETURN          reduce using rule 10 (instruction -> for .)
    ID              reduce using rule 10 (instruction -> for .)
    $end            reduce using rule 10 (instruction -> for .)
    ELSE            reduce using rule 10 (instruction -> for .)


state 8

    (0) S' -> program .



state 9

    (8) instruction -> print .

    }               reduce using rule 8 (instruction -> print .)
    {               reduce using rule 8 (instruction -> print .)
    IF              reduce using rule 8 (instruction -> print .)
    PRINT           reduce using rule 8 (instruction -> print .)
    WHILE           reduce using rule 8 (instruction -> print .)
    FOR             reduce using rule 8 (instruction -> print .)
    BREAK           reduce using rule 8 (instruction -> print .)
    CONTINUE        reduce using rule 8 (instruction -> print .)
    RETURN          reduce using rule 8 (instruction -> print .)
    ID              reduce using rule 8 (instruction -> print .)
    $end            reduce using rule 8 (instruction -> print .)
    ELSE            reduce using rule 8 (instruction -> print .)


state 10

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . block
    (7) instruction -> . if
    (8) instruction -> . print
    (9) instruction -> . while
    (10) instruction -> . for
    (11) instruction -> . break
    (12) instruction -> . continue
    (13) instruction -> . return
    (14) instruction -> . assign
    (15) instruction -> . assign_in_array
    (16) block -> . { instructions }
    (17) if -> . IF ( assignment ) instruction
    (18) if -> . IF ( assignment ) instruction ELSE instruction
    (19) print -> . PRINT arguments ;
    (22) while -> . WHILE ( assignment ) instruction
    (23) for -> . FOR ID = range instruction
    (25) break -> . BREAK ;
    (26) continue -> . CONTINUE ;
    (27) return -> . RETURN ;
    (28) return -> . RETURN assignment ;
    (29) assign -> . ID = assign
    (30) assign -> . ID = assignment ;
    (31) assign -> . ID ADDASSIGN assignment ;
    (32) assign -> . ID SUBASSIGN assignment ;
    (33) assign -> . ID MULASSIGN assignment ;
    (34) assign -> . ID DIVASSIGN assignment ;
    (35) assign_in_array -> . ID array_range = assign
    (36) assign_in_array -> . ID array_range = assignment ;
    (37) assign_in_array -> . ID array_range ADDASSIGN assignment ;
    (38) assign_in_array -> . ID array_range SUBASSIGN assignment ;
    (39) assign_in_array -> . ID array_range MULASSIGN assignment ;
    (40) assign_in_array -> . ID array_range DIVASSIGN assignment ;

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    {               shift and go to state 21
    IF              shift and go to state 16
    PRINT           shift and go to state 5
    WHILE           shift and go to state 3
    FOR             shift and go to state 12
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 4
    RETURN          shift and go to state 2
    ID              shift and go to state 15

    assign_in_array                shift and go to state 1
    return                         shift and go to state 11
    for                            shift and go to state 7
    instruction                    shift and go to state 44
    break                          shift and go to state 13
    while                          shift and go to state 19
    continue                       shift and go to state 20
    print                          shift and go to state 9
    assign                         shift and go to state 22
    block                          shift and go to state 23
    if                             shift and go to state 6

state 11

    (13) instruction -> return .

    }               reduce using rule 13 (instruction -> return .)
    {               reduce using rule 13 (instruction -> return .)
    IF              reduce using rule 13 (instruction -> return .)
    PRINT           reduce using rule 13 (instruction -> return .)
    WHILE           reduce using rule 13 (instruction -> return .)
    FOR             reduce using rule 13 (instruction -> return .)
    BREAK           reduce using rule 13 (instruction -> return .)
    CONTINUE        reduce using rule 13 (instruction -> return .)
    RETURN          reduce using rule 13 (instruction -> return .)
    ID              reduce using rule 13 (instruction -> return .)
    $end            reduce using rule 13 (instruction -> return .)
    ELSE            reduce using rule 13 (instruction -> return .)


state 12

    (23) for -> FOR . ID = range instruction

    ID              shift and go to state 45


state 13

    (11) instruction -> break .

    }               reduce using rule 11 (instruction -> break .)
    {               reduce using rule 11 (instruction -> break .)
    IF              reduce using rule 11 (instruction -> break .)
    PRINT           reduce using rule 11 (instruction -> break .)
    WHILE           reduce using rule 11 (instruction -> break .)
    FOR             reduce using rule 11 (instruction -> break .)
    BREAK           reduce using rule 11 (instruction -> break .)
    CONTINUE        reduce using rule 11 (instruction -> break .)
    RETURN          reduce using rule 11 (instruction -> break .)
    ID              reduce using rule 11 (instruction -> break .)
    $end            reduce using rule 11 (instruction -> break .)
    ELSE            reduce using rule 11 (instruction -> break .)


state 14

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 15

    (29) assign -> ID . = assign
    (30) assign -> ID . = assignment ;
    (31) assign -> ID . ADDASSIGN assignment ;
    (32) assign -> ID . SUBASSIGN assignment ;
    (33) assign -> ID . MULASSIGN assignment ;
    (34) assign -> ID . DIVASSIGN assignment ;
    (35) assign_in_array -> ID . array_range = assign
    (36) assign_in_array -> ID . array_range = assignment ;
    (37) assign_in_array -> ID . array_range ADDASSIGN assignment ;
    (38) assign_in_array -> ID . array_range SUBASSIGN assignment ;
    (39) assign_in_array -> ID . array_range MULASSIGN assignment ;
    (40) assign_in_array -> ID . array_range DIVASSIGN assignment ;
    (41) array_range -> . [ INTNUM , INTNUM ]
    (42) array_range -> . [ INTNUM ]

    =               shift and go to state 52
    ADDASSIGN       shift and go to state 49
    SUBASSIGN       shift and go to state 46
    MULASSIGN       shift and go to state 48
    DIVASSIGN       shift and go to state 51
    [               shift and go to state 50

    array_range                    shift and go to state 47

state 16

    (17) if -> IF . ( assignment ) instruction
    (18) if -> IF . ( assignment ) instruction ELSE instruction

    (               shift and go to state 53


state 17

    (5) instructions -> instruction .

    }               reduce using rule 5 (instructions -> instruction .)
    {               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)


state 18

    (25) break -> BREAK . ;

    ;               shift and go to state 54


state 19

    (9) instruction -> while .

    }               reduce using rule 9 (instruction -> while .)
    {               reduce using rule 9 (instruction -> while .)
    IF              reduce using rule 9 (instruction -> while .)
    PRINT           reduce using rule 9 (instruction -> while .)
    WHILE           reduce using rule 9 (instruction -> while .)
    FOR             reduce using rule 9 (instruction -> while .)
    BREAK           reduce using rule 9 (instruction -> while .)
    CONTINUE        reduce using rule 9 (instruction -> while .)
    RETURN          reduce using rule 9 (instruction -> while .)
    ID              reduce using rule 9 (instruction -> while .)
    $end            reduce using rule 9 (instruction -> while .)
    ELSE            reduce using rule 9 (instruction -> while .)


state 20

    (12) instruction -> continue .

    }               reduce using rule 12 (instruction -> continue .)
    {               reduce using rule 12 (instruction -> continue .)
    IF              reduce using rule 12 (instruction -> continue .)
    PRINT           reduce using rule 12 (instruction -> continue .)
    WHILE           reduce using rule 12 (instruction -> continue .)
    FOR             reduce using rule 12 (instruction -> continue .)
    BREAK           reduce using rule 12 (instruction -> continue .)
    CONTINUE        reduce using rule 12 (instruction -> continue .)
    RETURN          reduce using rule 12 (instruction -> continue .)
    ID              reduce using rule 12 (instruction -> continue .)
    $end            reduce using rule 12 (instruction -> continue .)
    ELSE            reduce using rule 12 (instruction -> continue .)


state 21

    (16) block -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . block
    (7) instruction -> . if
    (8) instruction -> . print
    (9) instruction -> . while
    (10) instruction -> . for
    (11) instruction -> . break
    (12) instruction -> . continue
    (13) instruction -> . return
    (14) instruction -> . assign
    (15) instruction -> . assign_in_array
    (16) block -> . { instructions }
    (17) if -> . IF ( assignment ) instruction
    (18) if -> . IF ( assignment ) instruction ELSE instruction
    (19) print -> . PRINT arguments ;
    (22) while -> . WHILE ( assignment ) instruction
    (23) for -> . FOR ID = range instruction
    (25) break -> . BREAK ;
    (26) continue -> . CONTINUE ;
    (27) return -> . RETURN ;
    (28) return -> . RETURN assignment ;
    (29) assign -> . ID = assign
    (30) assign -> . ID = assignment ;
    (31) assign -> . ID ADDASSIGN assignment ;
    (32) assign -> . ID SUBASSIGN assignment ;
    (33) assign -> . ID MULASSIGN assignment ;
    (34) assign -> . ID DIVASSIGN assignment ;
    (35) assign_in_array -> . ID array_range = assign
    (36) assign_in_array -> . ID array_range = assignment ;
    (37) assign_in_array -> . ID array_range ADDASSIGN assignment ;
    (38) assign_in_array -> . ID array_range SUBASSIGN assignment ;
    (39) assign_in_array -> . ID array_range MULASSIGN assignment ;
    (40) assign_in_array -> . ID array_range DIVASSIGN assignment ;

    {               shift and go to state 21
    IF              shift and go to state 16
    PRINT           shift and go to state 5
    WHILE           shift and go to state 3
    FOR             shift and go to state 12
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 4
    RETURN          shift and go to state 2
    ID              shift and go to state 15

    assign_in_array                shift and go to state 1
    return                         shift and go to state 11
    for                            shift and go to state 7
    instruction                    shift and go to state 17
    break                          shift and go to state 13
    while                          shift and go to state 19
    continue                       shift and go to state 20
    print                          shift and go to state 9
    instructions                   shift and go to state 55
    assign                         shift and go to state 22
    block                          shift and go to state 23
    if                             shift and go to state 6

state 22

    (14) instruction -> assign .

    }               reduce using rule 14 (instruction -> assign .)
    {               reduce using rule 14 (instruction -> assign .)
    IF              reduce using rule 14 (instruction -> assign .)
    PRINT           reduce using rule 14 (instruction -> assign .)
    WHILE           reduce using rule 14 (instruction -> assign .)
    FOR             reduce using rule 14 (instruction -> assign .)
    BREAK           reduce using rule 14 (instruction -> assign .)
    CONTINUE        reduce using rule 14 (instruction -> assign .)
    RETURN          reduce using rule 14 (instruction -> assign .)
    ID              reduce using rule 14 (instruction -> assign .)
    $end            reduce using rule 14 (instruction -> assign .)
    ELSE            reduce using rule 14 (instruction -> assign .)


state 23

    (6) instruction -> block .

    }               reduce using rule 6 (instruction -> block .)
    {               reduce using rule 6 (instruction -> block .)
    IF              reduce using rule 6 (instruction -> block .)
    PRINT           reduce using rule 6 (instruction -> block .)
    WHILE           reduce using rule 6 (instruction -> block .)
    FOR             reduce using rule 6 (instruction -> block .)
    BREAK           reduce using rule 6 (instruction -> block .)
    CONTINUE        reduce using rule 6 (instruction -> block .)
    RETURN          reduce using rule 6 (instruction -> block .)
    ID              reduce using rule 6 (instruction -> block .)
    $end            reduce using rule 6 (instruction -> block .)
    ELSE            reduce using rule 6 (instruction -> block .)


state 24

    (44) assignment -> matrix_initialization .

    ,               reduce using rule 44 (assignment -> matrix_initialization .)
    ;               reduce using rule 44 (assignment -> matrix_initialization .)
    )               reduce using rule 44 (assignment -> matrix_initialization .)


state 25

    (47) assignment -> array .

    ,               reduce using rule 47 (assignment -> array .)
    ;               reduce using rule 47 (assignment -> array .)
    )               reduce using rule 47 (assignment -> array .)


state 26

    (76) number -> INTNUM .

    +               reduce using rule 76 (number -> INTNUM .)
    -               reduce using rule 76 (number -> INTNUM .)
    *               reduce using rule 76 (number -> INTNUM .)
    /               reduce using rule 76 (number -> INTNUM .)
    DOTADD          reduce using rule 76 (number -> INTNUM .)
    DOTSUB          reduce using rule 76 (number -> INTNUM .)
    DOTMUL          reduce using rule 76 (number -> INTNUM .)
    DOTDIV          reduce using rule 76 (number -> INTNUM .)
    <               reduce using rule 76 (number -> INTNUM .)
    >               reduce using rule 76 (number -> INTNUM .)
    LESSEQUAL       reduce using rule 76 (number -> INTNUM .)
    MOREEQUAL       reduce using rule 76 (number -> INTNUM .)
    EQUAL           reduce using rule 76 (number -> INTNUM .)
    NOTEQUAL        reduce using rule 76 (number -> INTNUM .)
    ;               reduce using rule 76 (number -> INTNUM .)
    ,               reduce using rule 76 (number -> INTNUM .)
    )               reduce using rule 76 (number -> INTNUM .)
    :               reduce using rule 76 (number -> INTNUM .)
    {               reduce using rule 76 (number -> INTNUM .)
    IF              reduce using rule 76 (number -> INTNUM .)
    PRINT           reduce using rule 76 (number -> INTNUM .)
    WHILE           reduce using rule 76 (number -> INTNUM .)
    FOR             reduce using rule 76 (number -> INTNUM .)
    BREAK           reduce using rule 76 (number -> INTNUM .)
    CONTINUE        reduce using rule 76 (number -> INTNUM .)
    RETURN          reduce using rule 76 (number -> INTNUM .)
    ID              reduce using rule 76 (number -> INTNUM .)
    ]               reduce using rule 76 (number -> INTNUM .)


state 27

    (69) expression -> number .

    +               reduce using rule 69 (expression -> number .)
    -               reduce using rule 69 (expression -> number .)
    *               reduce using rule 69 (expression -> number .)
    /               reduce using rule 69 (expression -> number .)
    DOTADD          reduce using rule 69 (expression -> number .)
    DOTSUB          reduce using rule 69 (expression -> number .)
    DOTMUL          reduce using rule 69 (expression -> number .)
    DOTDIV          reduce using rule 69 (expression -> number .)
    <               reduce using rule 69 (expression -> number .)
    >               reduce using rule 69 (expression -> number .)
    LESSEQUAL       reduce using rule 69 (expression -> number .)
    MOREEQUAL       reduce using rule 69 (expression -> number .)
    EQUAL           reduce using rule 69 (expression -> number .)
    NOTEQUAL        reduce using rule 69 (expression -> number .)
    ;               reduce using rule 69 (expression -> number .)
    ,               reduce using rule 69 (expression -> number .)
    )               reduce using rule 69 (expression -> number .)
    :               reduce using rule 69 (expression -> number .)
    {               reduce using rule 69 (expression -> number .)
    IF              reduce using rule 69 (expression -> number .)
    PRINT           reduce using rule 69 (expression -> number .)
    WHILE           reduce using rule 69 (expression -> number .)
    FOR             reduce using rule 69 (expression -> number .)
    BREAK           reduce using rule 69 (expression -> number .)
    CONTINUE        reduce using rule 69 (expression -> number .)
    RETURN          reduce using rule 69 (expression -> number .)
    ID              reduce using rule 69 (expression -> number .)


state 28

    (72) expression -> - . expression
    (61) expression -> . expression + expression
    (62) expression -> . expression - expression
    (63) expression -> . expression * expression
    (64) expression -> . expression / expression
    (65) expression -> . expression DOTADD expression
    (66) expression -> . expression DOTSUB expression
    (67) expression -> . expression DOTMUL expression
    (68) expression -> . expression DOTDIV expression
    (69) expression -> . number
    (70) expression -> . ID
    (71) expression -> . ID TRANSPOSE
    (72) expression -> . - expression
    (76) number -> . INTNUM
    (77) number -> . FLOAT

    ID              shift and go to state 37
    -               shift and go to state 28
    INTNUM          shift and go to state 26
    FLOAT           shift and go to state 38

    expression                     shift and go to state 56
    number                         shift and go to state 27

state 29

    (45) assignment -> relational_expression .

    ,               reduce using rule 45 (assignment -> relational_expression .)
    ;               reduce using rule 45 (assignment -> relational_expression .)
    )               reduce using rule 45 (assignment -> relational_expression .)


state 30

    (27) return -> RETURN ; .

    {               reduce using rule 27 (return -> RETURN ; .)
    IF              reduce using rule 27 (return -> RETURN ; .)
    PRINT           reduce using rule 27 (return -> RETURN ; .)
    WHILE           reduce using rule 27 (return -> RETURN ; .)
    FOR             reduce using rule 27 (return -> RETURN ; .)
    BREAK           reduce using rule 27 (return -> RETURN ; .)
    CONTINUE        reduce using rule 27 (return -> RETURN ; .)
    RETURN          reduce using rule 27 (return -> RETURN ; .)
    ID              reduce using rule 27 (return -> RETURN ; .)
    $end            reduce using rule 27 (return -> RETURN ; .)
    }               reduce using rule 27 (return -> RETURN ; .)
    ELSE            reduce using rule 27 (return -> RETURN ; .)


state 31

    (73) matrix_initialization -> EYE . ( INTNUM )

    (               shift and go to state 57


state 32

    (43) assignment -> STRING .

    ,               reduce using rule 43 (assignment -> STRING .)
    ;               reduce using rule 43 (assignment -> STRING .)
    )               reduce using rule 43 (assignment -> STRING .)


state 33

    (28) return -> RETURN assignment . ;

    ;               shift and go to state 58


state 34

    (75) matrix_initialization -> ONES . ( INTNUM )

    (               shift and go to state 59


state 35

    (74) matrix_initialization -> ZEROS . ( INTNUM )

    (               shift and go to state 60


state 36

    (48) array -> [ . ]
    (49) array -> [ . dimensions ]
    (50) dimensions -> . values
    (51) values -> . value
    (52) values -> . value , values
    (53) value -> . STRING
    (54) value -> . number
    (76) number -> . INTNUM
    (77) number -> . FLOAT

    ]               shift and go to state 65
    STRING          shift and go to state 66
    INTNUM          shift and go to state 26
    FLOAT           shift and go to state 38

    values                         shift and go to state 64
    dimensions                     shift and go to state 61
    value                          shift and go to state 62
    number                         shift and go to state 63

state 37

    (70) expression -> ID .
    (71) expression -> ID . TRANSPOSE
